# DeepExtractRuntime

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  hooks.json  pyproject.toml
agents/: README.md  code-lifter.md  logic-scanner.md  memory-corruption-scanner.md  re-analyst.md  registry.json  security-auditor.md  taint-scanner.md  triage-coordinator.md  type-reconstructor.md  verifier.md
bootstrap/: AGENTS.md  CLAUDE.md
commands/: README.md  ai-logical-bug-scan.md  audit-function.md  audit.md  batch-audit.md  brainstorm.md  cache-manage.md  callgraph.md  com-analysis.md  com.md  compare-modules.md  data-flow-cross.md  data-flow.md  diff.md  explain-function.md  explain.md  full-report.md  health.md  hunt-execute.md  hunt-plan.md  hunt.md  imports.md  lift-class.md  logic-scan.md  memory-scan.md  pipeline.md  prioritize.md  quickstart.md  reconstruct-types.md  registry.json  rpc-analysis.md  rpc.md  runs.md  scan.md  search.md  state-machines.md  strings.md  taint.md  trace-export.md  triage-module.md  (+9 more)
config/: README.md  defaults.json
docs/: ONBOARDING.md  agent_authoring_guide.md  ai_scanner_authoring_guide.md  architecture.md  cache_conventions.md  command_authoring_guide.md  command_depth_spectrum.md  cross_module_callgraph_guide.md  data_format_reference.md  examples.md  file_info_format_reference.md  function_index_format_reference.md  helper_api_reference.md  hunt_dataflow_cross_module_analysis.md  ida_conventions_reference.md  integration_guide.md  module_profile_format_reference.md  performance_guide.md  persistence-and-lifecycle.md  (+9 more)
(+872 files in other folders)
